Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test14.java
/* Test14
 * @ Objetivo: que falta la sentencia o bloque correspondiente al else.
 */
class clase
{
	dynamic void metodo()
	{
		if (4 % 2 == 0)
			return;
		else
	}
	
}

